--- a/app/globals.css
+++ b/app/globals.css
@@ -6558,7 +6558,7 @@ input:not(:-webkit-autofill) {
 }
 
 .search-input-container .relative {
-  max-width: 28rem;
+  width: 100%;
   margin: 0 auto;
 }
 
