--- a/app/globals.css
+++ b/app/globals.css
@@ -965,7 +965,6 @@ body {
   overflow: hidden;
   z-index: 40;
   transition: transform 0.3s ease-in-out;
-  
 }
 
 .sidebar-content {
@@ -6482,7 +6481,6 @@ input:not(:-webkit-autofill) {
   filter: brightness(0.8);
 }
 
-
 @media (min-width: 1024px) {
   .profile-avatar {
     width: 40px;
@@ -6492,7 +6490,7 @@ input:not(:-webkit-autofill) {
 }
 
 .profile-initials {
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   line-height: 1;
 }
 
@@ -6556,14 +6554,18 @@ input:not(:-webkit-autofill) {
   align-items: center;
   justify-content: center;
   padding: 1rem;
-  background: linear-gradient(135deg, var(--accent-warning) 0%, var(--accent-light) 100%);
+  background: linear-gradient(
+    135deg,
+    var(--accent-warning) 0%,
+    var(--accent-light) 100%
+  );
 }
 
 .login-background-image {
   display: none;
   width: 25%;
   height: 100vh;
-  background-image: url('/loginBackground.png');
+  background-image: url("/loginBackground.png");
   background-size: cover;
   background-position: center;
   position: relative;
@@ -6652,7 +6654,6 @@ input:not(:-webkit-autofill) {
   }
 }
 
-
 /* Login Page  */
 .login-container {
   min-height: 100vh;
@@ -6660,14 +6661,18 @@ input:not(:-webkit-autofill) {
   align-items: center;
   justify-content: center;
   padding: 1rem;
-  background: linear-gradient(135deg, var(--accent-warning) 0%, var(--accent-light) 100%);
+  background: linear-gradient(
+    135deg,
+    var(--accent-warning) 0%,
+    var(--accent-light) 100%
+  );
 }
 
 .login-background-image {
   display: none;
   width: 25%;
   height: 100vh;
-  background-image: url('/loginBackground.png');
+  background-image: url("/loginBackground.png");
   background-size: cover;
   background-position: center;
   position: relative;
